Mon Aug 19 15:19:20 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* devprobe.c, fsysopts.c, hurdids.c, login.c, portinfo.c, ps.c,
 	settrans.c, showtrans.c, storeinfo.c, vmstat.c, w.c, x.c (doc):
 	Add program description.

Wed Aug 14 10:18:41 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (login-LDLIBS): New variable.
	(login): Dependency on -lutil removed.
	(libutil-libsubst): Variable removed.

Sat Aug 10 10:03:57 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ps.c (options): Whoops, short option for --sort is -s.

	* Makefile (LCLHDRS): New variable.

Wed Jul 31 14:23:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* login.c (main/verify_passwd): Use #pragma weak instead of
	__attribute__ ((weak)).
	* su.c (check_password): Likewise.

	* login.c (options): Change --inherit-environ to --preserve-environment.
	Change --no-environ to --no-environment-args.
	Change --environ to --envvar and --environ-default to --envvar-default.
	* ps.c (options, main): Change --fmt to --format/-F.
	Change --posix-fmt/-o to --posix-format/-o.
	Change --sort to --sort/-s.
	Change --pgrp to --pgrp/-G.
	Change --login to --login/-L.
	Change --threads/-s to --threads/-T.
	Change --session to --session/-S.
	(OPT_FMT, OPT_SORT, OPT_PGRP, OPT_LOGIN, OPT_SESS): Macros removed.
	* w.c (options, main): Change --fmt to --format/-F.
	Change --sort to --sort/-s.
	(OPT_FMT, OPT_SORT): Macros removed.

Wed Jul 31 14:24:05 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* login.c (main/verify_passwd): Declare crypt weak in a portable
	way.
	* su.c (check_password): Likewise.
	
Tue Jul 30 14:49:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* login.c (main/verify_passwd): If government is broken, don't use
	crypt.
	* su.c (check_password): Likewise.

	* login.c (main/verify_passwd): Provide correct prototype for
	crypt. 
	* su.c (check_password): Likewise.

Mon Jul 29 03:22:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* vmstat.c (val_t): Make `long long'.
